--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,20 @@
 <div class="container">
   <div class="border rounded-pill bg-dark">
-    <a [routerLink]="['/']"  class="m-2 p-2 display-1 text-white justify-content-center">note.</a>
-    <button [routerLink]="['/create']" class="btn btn-success text-center">create</button>
+    <div class="container">
+      <div class="row justify-content-evenly align-items-center">
+        <div class="col ms-5 me-5">
+          <a [routerLink]="['/']"  class="m-2 p-2 display-1 text-white text-decoration-none">note.</a>
+        </div>
+
+        <div class="col text-end me-3">
+          <button [routerLink]="['/create']" class="btn btn-light rounded-circle text-center">+</button>
+        </div>
+
+      </div>
+    </div>
+
+
+
   </div>
 <div class="p-3"></div>
   <router-outlet></router-outlet>
